2006-07-15  Karl Berry  <karl@gnu.org>

	* hello.c (main): update copyright to 2006.

2006-05-03  Karl Berry  <karl@gnu.org>

	* Makefile.am (noinst_HEADERS): remove, gettext.h comes from gnulib.
	(hello_LDADD): remove @ALLOCA@.
	* hello.c: remove mail reading stuff, and hence alloca stuff.
	
	* getopt*.c, gettext.h: remove these files, they come from gnulib.

2005-08-19  Karl Berry  <karl@gnu.org>

	* src/hello.c (main): version message formatting.

2002-07-20  Karl Eichwalder  <ke@gnu.franken.de>

	* Makefile.am (noinst_HEADERS): New variable. add gettext.h
	* hello.c: Include gettext.h.

2002-05-22  Karl Eichwalder  <keichwa@gmx.net>

	* alloca.c: Update (provided by Paul Eggert).
	* getopt1.c: Likewise.
	* getopt.h: Likewise.
	* getopt.c: Likewise.

2002-05-22  Karl Eichwalder  <keichwa@gmx.net>

	* Makefile.am (hello_LDADD): Use @LIBINTL@ instead of @INTLLIBS@;
	recommended by gettextize.

2002-02-02  Karl Eichwalder  <keichwa@gmx.net>

	* hello.c: Add "TRANSLATORS: " tag instead of "TRANS: " to make
	it visible to standard xgettext settings.
	Reported by Bruno Haible.

2002-01-27  Karl Eichwalder  <ke@gmx.net>

	* hello.c (main): Add next-generation greeting format using the
	switches -n, --next-generation.

2001-06-23  Karl Eichwalder  <keichwa@gmx.net>

	* hello.c (main): Adjust Copyright dates.

	* hello.c (main): Use PACKAGE_BUGREPORT.

	* Makefile.am (DEFS): New variable.  Define LOCALEDIR here.
	(INCLUDES): Don't define LOCALEDIR here.  Add -I.. and -I$(srcdir)
	and -I$(top_srcdir)/intl.

2001-05-24  Karl Eichwalder  <keichwa@gmx.net>

	* hello.c (main): Avoid leading newlines inside of translatable
	strings.

2001-05-21  Karl Eichwalder  <keichwa@gmx.net>

	* hello.c: Include unistd.h if available to avoid warning under
	BeOS.
	Patch by Bruno Haible.

	* hello.c: Include libintl.h only, if ENABLE_NLS is true.
	Otherwise it isn't possible to build hello with --disable-nls.
	Use gettext() if ENABLE_NLS is true.